# drq

./: CLAUDE.md  Makefile  pyproject.toml
corewar/corewar/: core.py  graphics.py
corewar/tests/: mars_test.py
docs/plans/: 2026-01-14-janus-port-design.md  2026-01-14-janus-port-impl.md
src/: drq.py  llm_async.py  llm_corewar.py
src/prolog/: archive.pl  constraints.pl  drq.pl  strategy.pl  warrior.pl
src/python/: llm_bridge.py  sim_bridge.py  stream_bridge.py
tests/prolog/: run_all.pl  test_archive.pl  test_constraints.pl  test_drq.pl  test_strategy.pl  test_warrior.pl
tests/python/: test_llm_bridge.py  test_sim_bridge.py  test_stream_bridge.py
